alterando para nova versao

--- a/aded-itens.html
+++ b/aded-itens.html
@@ -132,6 +132,7 @@
     <div id="taverna" class="itens"></div>
     <div id="alfaiataria" class="itens"></div>
 
+    <script src="scripts/itens.js"></script>
     <script type="text/javascript">
 
       let texto = "";
@@ -148,6 +149,7 @@
         sortear_alfaiataria();
       });
 
+      /*
       const ITENS = [
         { nome: '⛏ Sineta', preco: { quantidade: 1, moeda: 'po' }, peso: 0 },
         { nome: '⛏ Algibeira Grande', preco: { quantidade: 1, moeda: 'po' }, peso: 0.5 },
@@ -576,6 +578,7 @@
         "⚔ Bastão (quase quebrado)": { level: 1, preco: { quantidade: 5, moeda: 'pp' }, peso: 1, tamanho: 'Médio', tipo: 'Concussão', velocidade: 3, dano_p: '1d2', dano_mg: '1d2', dano: 3, detalhes: [] },
         "⚔ Laço": { level: 1, preco: { quantidade: 1, moeda: 'pp' }, peso: 1, tamanho: 'Médio', tipo: '', velocidade: 8, dano_p: '1d2', dano_mg: '1', dano: 1, detalhes: [] }
       };
+      */
 
       function sortear_lista_itens(loot, itens, total_itens,callback) {
         for (let i=0; i<total_itens; i++) {
